# x-ray-tracer

./: .gitignore  Al2O3.txt  CMakeLists.txt  CMakeLists_DEBUG.txt  README.md  config.ini  main.cpp  test.cpp
headers/: geometry.hpp  include.hpp  make_trace.hpp  setup.hpp  trace.hpp
src/: CMakeLists.txt  geometry.cpp  make_trace.cpp  setup.cpp  trace.cpp
